small fixes in spacing and stuff

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ p {
 h1,
 h2 {
     font-size: 36px;
-    margin-top: 0;
+    margin-top: 5px;
     margin-bottom: 20px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     letter-spacing: 0.5px;
@@ -60,7 +60,7 @@ a:hover {
 .container {
     margin: auto;
     max-width: 800px;
-    margin-top: 25px;
+    margin-top: 20px;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -114,7 +114,7 @@ ul {
 }
 
 li {
-    margin: 10px 0;
+    margin: 12px 0;
     padding: 5px;
 }
 
